SF Primes/src/objects/GlobalSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds global settings for the various triggers and apex jobs to function. The only thing that should be modified outside of a pod switch is the error reporting email, which is a comma separated list. Example: &apos;tlaporte@centerstance.com,psaini@cobaltgroup.com&apos;</description>
    <fields>
        <fullName>AEs_To_Delete_RM__c</fullName>
        <description>If the account was owned by an Account Executive (Not Camela Thompson, Cast Iron, or Conversion) and is now owned by Cast Iron, Conversion, Or Camela Thompson, delete the Regional Manager record and do not add a new Regional Manager</description>
        <inlineHelpText>Comma(,) seperated List. If the account was owned by an AE (Not Camela Thompson, Cast Iron, or Conversion) and is now owned by Cast Iron, Conversion, Or Camela Thompson, delete the Regional Manager record and do not add a new Regional Manager.</inlineHelpText>
        <label>AEs to Delete RM</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Integration_Username__c</fullName>
        <description>This is the integration username to be used in validation rules.</description>
        <inlineHelpText>This is the integration username to be used in validation rules.</inlineHelpText>
        <label>Admin Integration Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseTriggers_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables (checked) or Disables (unchecked) the Case After Insert or Update trigger.</description>
        <inlineHelpText>Enables (checked) or Disables (unchecked) the Case After Insert or Update trigger.</inlineHelpText>
        <label>CaseTriggers On?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_User_ID__c</fullName>
        <description>Conversion user ID</description>
        <label>Conversion User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMG_Contact_ByPass_Username__c</fullName>
        <description>This is the user to be used in Contact Work Flow and validation rules to by pass any updated made by DMG User.</description>
        <label>DMG Contact ByPass Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Profile_Profiles_1__c</fullName>
        <description>A comma separated list of profiles that can create a new Dealer Group Profile from the Visualforce page</description>
        <inlineHelpText>A comma separated list of profiles that can create a new Dealer Group Profile from the Visualforce page</inlineHelpText>
        <label>Dealer Group Profile - Profiles 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Profile_Profiles_2__c</fullName>
        <description>A comma separated list of profiles that can create a new Dealer Group Profile from the Visualforce page</description>
        <inlineHelpText>A comma separated list of profiles that can create a new Dealer Group Profile from the Visualforce page</inlineHelpText>
        <label>Dealer Group Profile - Profiles 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultBusinessHoursId__c</fullName>
        <label>DefaultBusinessHoursId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultCaseTeamMemberId__c</fullName>
        <label>DefaultCaseTeamMemberId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_Case_Attachment_Link__c</fullName>
        <label>Email 2 Case Attachment Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_Case_Email_Attachment_Profiles__c</fullName>
        <label>Email 2 Case Email Attachment Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_Case_Email_Message_Profiles__c</fullName>
        <label>Email 2 Case Email Message Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_Case_Prevent_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email 2 Case Prevent Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_2_Case_User__c</fullName>
        <description>Used in CB_UpdateContactAccount.trigger. This e-mail is the UserName (in the form of an e-mail address) for the e-mail to Case functionality.</description>
        <inlineHelpText>This e-mail is the UserName (in the form of an e-mail address) for the e-mail to Case functionality.</inlineHelpText>
        <label>Email 2 Case User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorEmail__c</fullName>
        <label>ErrorEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Mgrs_Mgr_Roles_to_Exclude__c</fullName>
        <description>Used in the DS_UpdateLead Trigger to exclude certain Roles from being set on the Owner Manager&apos;s Manager field on Lead.</description>
        <inlineHelpText>Used in the DS_UpdateLead Trigger to exclude certain Roles from being set on the Owner Manager&apos;s Manager field on Lead.</inlineHelpText>
        <label>Lead Owner Mgr&apos;s Mgr Roles to Exclude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMReportURL__c</fullName>
        <label>MMReportURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NADA_Lead_Campaign__c</fullName>
        <label>NADA Lead Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NADA_Lead_Folder__c</fullName>
        <label>NADA Lead Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NADA_Lead_Status__c</fullName>
        <label>NADA Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recap_Activation_Order_Specialist__c</fullName>
        <description>Used in the CB_Recap.RecapBeforeInsertTriggerHandler method to advance the status to &quot;With IFS - Working&quot;.</description>
        <inlineHelpText>Used in the CB_Recap.RecapBeforeInsertTriggerHandler method to advance the status to &quot;With IFS - Working&quot;.</inlineHelpText>
        <label>Recap Activation Order Specialist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Global Settings</label>
</CustomObject>